# tetris-sfml2

./: CMakeLists.txt  README.md  TODO.md  conanfile.txt
doc/: Doxyfile
doc/html/: _abstract_entity_8cpp.html  _abstract_entity_8cpp.js  _abstract_entity_8cpp__incl.map  _abstract_entity_8cpp__incl.md5  _abstract_entity_8hh.html  _abstract_entity_8hh__dep__incl.map  _abstract_entity_8hh__dep__incl.md5  _abstract_entity_8hh__incl.map  _abstract_entity_8hh__incl.md5  _abstract_entity_8hh_source.html  _assets_manager_8cpp.html  _assets_manager_8cpp__incl.map  _assets_manager_8cpp__incl.md5  _assets_manager_8hh.html  _assets_manager_8hh__dep__incl.map  _assets_manager_8hh__dep__incl.md5  _assets_manager_8hh__incl.map  _assets_manager_8hh__incl.md5  _assets_manager_8hh_source.html  _block_entity_8cpp.html  _block_entity_8cpp__incl.map  _block_entity_8cpp__incl.md5  _block_entity_8hh.html  _block_entity_8hh__dep__incl.map  _block_entity_8hh__dep__incl.md5  _block_entity_8hh__incl.map  _block_entity_8hh__incl.md5  _block_entity_8hh_source.html  _i_observable_8hh.html  _i_observable_8hh__dep__incl.map  _i_observable_8hh__dep__incl.md5  _i_observable_8hh__incl.map  _i_observable_8hh__incl.md5  _i_observable_8hh_source.html  _i_observer_8hh.html  _i_observer_8hh__dep__incl.map  _i_observer_8hh__dep__incl.md5  _i_observer_8hh__incl.map  _i_observer_8hh__incl.md5  _i_observer_8hh_source.html  (+423 more)
scripts/: build.sh  install.sh  launch.sh
src/: env.hh  main.cpp
src/Assets/: score.txt
src/Entities/: BlockEntity.cpp  BlockEntity.hh  Menu.cpp  Menu.hh  Movable.cpp  Movable.hh  Scene.hh  (+7 more)
(+90 files in other folders)
